--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
 <h1>Discover hidden places in the world around you</h1>
-<h2>Download Excursion (Coming soon!)</h2>
+<h3>Download Excursion (Coming soon!)</h3>
+<video src="./resources/videos/excursion.mp4" width="404px" height="720px" autoplay>
+  Your browser does not support video.
+</video>
+<h2>Your personal travel guide</h2>
+<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<img src="./resources/images/camp.jpg" alt="Camping at night">
+<img src="./resources/images/phone.png" alt="Phone icon">
+<h3>Download Excursion (Coming Soon!)</h3>
+<p style="float:right;">&copy; Excursion</p>
   </body>
 </html>
